<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:paddingBottom="8dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/streetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        app:errorEnabled="true"
        app:labelText="@string/streetHint"
        app:layout_constraintTop_toTopOf="parent"
        app:panelBackgroundColor="@color/colorBottomSheetTFBackground"
        app:primaryColor="@color/colorAccent"
        app:secondaryColor="@color/colorSecondary"
        tools:layout_editor_absoluteX="16dp">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/streetLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="14dp"
            android:singleLine="false"
            android:textColor="@color/colorAccent" />
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>

    <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
        android:id="@+id/houseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="17dp"
        app:helperTextColor="@color/colorSecondary"
        app:labelText="@string/houseNumberHint"
        app:layout_constraintTop_toBottomOf="@+id/streetLayout"
        app:panelBackgroundColor="@color/colorBottomSheetTFBackground"
        app:primaryColor="@color/colorAccent"
        app:secondaryColor="@color/colorSecondary"
        tools:layout_editor_absoluteX="17dp">

        <studio.carbonylgroup.textfieldboxes.ExtendedEditText
            android:id="@+id/houseLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="14dp"
            android:textColor="@color/colorAccent" />
    </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>


    <Button
        android:id="@+id/okBtn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/circle_btn"
        android:text="@string/okBtnText"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/houseLayout"
        app:rippleColor="@color/colorRipple" />

</androidx.constraintlayout.widget.ConstraintLayout>