<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/map"
    android:orientation="vertical"
    tools:context=".ui.MainDisplayActivity">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/signOutBtnLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">
            <Button
                android:id="@+id/signOutBtn"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorOpacityPlusDark"
                android:text="@string/signOutBtn"
                android:textColor="@color/colorBottomSheetTFBackground"
                android:theme="@style/Ripple"
                tools:targetApi="lollipop" />
        </RelativeLayout>

    </FrameLayout>

    <include layout="@layout/bottom_sheet" />

    <LinearLayout
        android:id="@+id/qrCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOpacityDark"
        android:orientation="vertical"
        android:visibility="gone">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="117dp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/closeQRBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:src="@drawable/ic_close"/>

            <ImageView
                android:id="@+id/qrCodeImage"
                android:layout_width="255dp"
                android:layout_height="255dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="34dp"
                android:layout_marginEnd="28dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_marginTop="31dp"
                android:fontFamily="@font/roboto"
                android:text="@string/qrGenerateSuccess"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/timeAutoArrived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="31dp"
                android:fontFamily="@font/roboto"
                android:text="@string/timeArrivedText"
                android:textColor="@color/colorSecondary"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

